src/snapshots/atuio__tui__tests__zoom10.snap
---
source: src/tui.rs
expression: zoom6
---
1.0━│⡇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━atuio━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┌───────────────┐
┃   │⡇⢀⡀       ⢀⡀       ⣀⡀       ⣀        ⡀       ⢀⡀       ⢀                                                                                   │sine440fade.wav│
┃   │⡇⡸⢸       ⡎⢱      ⢀⠇⢇      ⢠⠋⡆      ⢸⠹⡀      ⡜⢱       ⡏⢧      ⢀⠏⡆      ⢰⠻⡀      ⣸⢹       ⡜⢣       ⡎⡆      ⢀⠿⡄      ⢰⢳⡀      ⡰⢣       ⡔⡆   └───────────────┘
┃   │⡇⡇ ⡇     ⢠⠃⠸⡀     ⢸ ⢸      ⡸ ⢣      ⡇ ⡇     ⢀⠇⠘⡄     ⢰⠁⢸      ⢸ ⢱      ⡜ ⡇      ⡇⠈⡆     ⢠⠃⠸⡀     ⢰⠁⢸      ⢸ ⢇      ⡎ ⡇      ⡇⠘⡄     ⢠⠃⢸      ⢸ ⢣      ⡸ ⡇ ┃
┃   │⡇⠁ ⢇     ⢸  ⡇     ⡸ ⠈⡆     ⡇ ⢸     ⢀⠇ ⢱     ⢸  ⡇     ⢸  ⡇     ⡎ ⢸      ⡇ ⢸     ⢰⠁ ⡇     ⢸  ⡇     ⡸ ⠘⡄     ⡇ ⢸     ⢀⠇ ⢣     ⢰⠁ ⡇     ⢸ ⠈⡆     ⡜ ⢸      ⡇ ⢱ ┃
┃   │⡇  ⢸     ⡎  ⢇     ⡇  ⡇    ⢀⠇ ⠈⡆    ⢸  ⢸     ⡸  ⢱     ⡎  ⡇     ⡇  ⡇    ⢰⠁ ⢸     ⢸  ⢸     ⡸  ⡇     ⡇  ⡇    ⢀⠇ ⠘⡄    ⢸  ⢸     ⢸  ⢣     ⡎  ⡇     ⡇ ⠈⡆    ⢰⠁ ⢸ ┃
┃   │⡇  ⢸     ⡇  ⢸    ⢀⠇  ⢇    ⢸   ⡇    ⢸  ⠘⡄    ⡇  ⢸     ⡇  ⢣    ⢰⠁  ⡇    ⢸   ⡇    ⡸  ⢸     ⡇  ⢸    ⢀⠇  ⢇    ⢸   ⡇    ⢸  ⠘⡄    ⡎  ⢸     ⡇  ⢱    ⢰⠁  ⡇    ⢸  ⠈⡆┃
┃   │⡇   ⡇    ⡇  ⢸    ⢸   ⢸    ⢸   ⡇    ⡇   ⡇    ⡇  ⠘⡄   ⢠⠃  ⢸    ⢸   ⢸    ⡜   ⡇    ⡇   ⡇    ⡇  ⢸    ⢸   ⢸    ⢸   ⢇    ⡎   ⡇    ⡇  ⠸⡀   ⢰⠁  ⢸    ⢸   ⢱    ⡸   ⡇┃
┃   │⡇   ⡇   ⢸    ⡇   ⢸   ⢸    ⡇   ⢸    ⡇   ⢇   ⢠⠃   ⡇   ⢸   ⠸⡀   ⡜   ⢸    ⡇   ⢱    ⡇   ⡇   ⢸   ⠈⡆   ⢸   ⢸    ⡇   ⢸    ⡇   ⢇   ⢠⠃   ⡇   ⢸   ⠸⡀   ⡜   ⢸    ⡇   ⢱┃
-1.0│⡇   ⢱   ⢸    ⡇   ⡎   ⠈⡆   ⡇   ⢸   ⢀⠇   ⢸   ⢸    ⡇   ⡸    ⡇   ⡇   ⠸⡀   ⡇   ⢸   ⢸    ⢣   ⢸    ⡇   ⡎   ⠈⡆   ⡇   ⢸   ⢠⠃   ⢸   ⢸    ⡇   ⡸    ⡇   ⡇   ⠘⡄   ⡇   ⢸┃
┃   │⡇   ⢸   ⡜    ⢣   ⡇    ⡇  ⢠⠃   ⠘⡄  ⢸    ⢸   ⢸    ⢸   ⡇    ⡇   ⡇    ⡇  ⢰⠁   ⢸   ⢸    ⢸   ⡎    ⢣   ⡇    ⡇  ⢀⠇    ⡇  ⢸    ⢸   ⡸    ⢸   ⡇    ⡇   ⡇    ⡇  ⢸    ⠘⡄
┃   │⡇   ⢸   ⡇    ⢸  ⢠⠃    ⢣  ⢸     ⡇  ⢸    ⠘⡄  ⡇    ⢸   ⡇    ⢸  ⢸     ⡇  ⢸     ⡇  ⡎    ⠸⡀  ⡇    ⢸  ⢠⠃    ⢣  ⢸     ⡇  ⡸     ⡇  ⡇    ⢸   ⡇    ⢸  ⢰⠁    ⡇  ⢸     ⡇
┃   │⡇    ⡇ ⢀⠇    ⠸⡀ ⢸     ⢸  ⢸     ⢣  ⡇     ⡇  ⡇    ⠈⡆ ⢸     ⢸  ⢸     ⢸  ⡜     ⡇  ⡇     ⡇ ⢠⠃    ⠘⡄ ⢸     ⢸  ⡸     ⢣  ⡇     ⡇ ⢀⠇     ⡇ ⢰⠁    ⢸  ⢸     ⢸  ⡎     ⠃
┃   │⡇    ⡇ ⢸      ⡇ ⡜     ⠘⡄ ⡇     ⢸  ⡇     ⢣ ⢸      ⡇ ⢸      ⡇ ⡎     ⢸  ⡇     ⢸ ⢰⠁     ⢇ ⢸      ⡇ ⡜     ⠘⡄ ⡇     ⢸ ⢠⠃     ⢱ ⢸      ⢇ ⡸      ⡇ ⡇     ⠸⡀⢀⠇     ┃
┃   │⡇    ⢸ ⡜      ⢇ ⡇      ⡇⢀⠇     ⠈⡆⢸      ⢸ ⡼      ⢱ ⡎      ⢇⢀⠇      ⡇⢰⠁     ⠘⡄⡸      ⢸ ⡞      ⢱ ⡇      ⣇⢰⠁     ⠈⡆⢸      ⠸⡀⡜      ⢸ ⡇      ⢣⢠⠃      ⡇⢸      ┃
┃   │⡇    ⠈⣦⠇      ⠸⣴⠁      ⢱⡼       ⢣⡎       ⢧⠇      ⠘⣶⠃      ⠸⡼       ⠱⠎       ⠣⠇      ⠈⠷⠃      ⠘⠾       ⠸⠞       ⠱⠇       ⠳⠃      ⠈⠛       ⠘⠚       ⠘⠃      ┃
┃   │⡇                                                                                                                                                         ┃
0.0 │⡇                                                                                                                                                         ┃
┃   └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┗━━0s━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Move <WASD> Rect <R> Quit <Q> ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━0.04s
