src/snapshots/atuio__tui__tests__zoom_in.snap
---
source: src/tui.rs
expression: test.render()
---
1.0━│⡇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━atuio━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┌───────────────┐
┃   │⡇⣀⢀⢀⢀ ⡀⡀                                                                                                                                  │sine440fade.wav│
┃   │⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢰⢰⡆⡆⡆⣶⢰⢰⢠⡆⡄⡄⣠⢠⢠ ⡄⡄⡀⢀⢀⢀ ⡀⡀⡀⢀                                                                                              └───────────────┘
┃   │⡇⣿⣼⢸⢸⣇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⣇⣿⢸⢸⣼⡇⡇⣧⣾⢸⢸⣦⡇⡇⣷⣸⢸⢸⡆⡇⡇⣷⢸⢸⢸⡆⡆⡆⣶⢰⢰⢰⡆⡆⡆⣤⢠⢠⢠⡄⡄⡄⣠⢀⢀⢀⡀⡀⡀⢀⢀⢀                                                                          ┃
┃   │⡇⣿⣿⢸⢸⣿⡇⡇⣿⣾⢸⢸⣇⡇⣧⣿⢸⢸⣾⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣼⢸⢸⣧⡇⡇⣿⣸⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⢰⡇⡇⣇⣾⢸⢸⣠⡇⡇⣦⣰⢰⢰⡀⡆⡆⣦⢰⢠⢠⡄⡄⡄⣤⢠⢠⢀⡀⡀⡀⣀⢀⢀⢀⡀⡀                                     ┃
┃   │⡇⣿⣿⢸⣾⣿⡇⣷⣿⣿⢸⣿⣿⡇⣿⣿⣾⢸⣿⣷⡇⣿⣿⣸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣷⡇⣇⣿⣼⢸⣼⡇⡇⣷⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣾⢸⢸⣧⡇⡇⣿⣼⢸⢸⣇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣾⢰⢰⢰⡆⡆⡆⣴⢰⢰⢀⡄⡄⡄⣠⢠⢠ ⡄⡀⡀⢀⢀⢀ ⡀⡀⡀ ┃
┃   │⡇⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣷⡇⣿⣿⣸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⣇⣿⣿⢸⣾⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣧⡇⣿⣿⣸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⣸⣿⡇⣇⣿⣾⢸⣼⣧⡇⣷⣿⣸⢸⣾⣇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣾⢸⢸⣷⡇⡇⣿⣼┃
┃   │⡇⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣷⡇⣿⣿⡞⣼⣿⣇⢷⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣷⡇⣿⣿⣼⢸⣿⣇⢇⣿⣿⢸⣼⣿⡇⣧⣿⣿⢸⣾⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣧⡇⣿⣿⣸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⣇⣿⣿┃
┃   │⡇⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⡟⣼⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡎⣿⣿⣇⢿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⡿⣸⣿⣿⢣⣿⣿⡏⣾⣿⣿⢸⣿⣿⡇⣿⣿⣷⢹⣿⣿⡸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⢇⣿⣿⡿⣼⣿⣿⢳⣿⣿⡏⣿⣿⣷⢹⣿⣿⡜⣿⣿⣇⢿⣿⣿⢀
-1.0│⡇⣿⣿⡎⣿⣿⣇⢿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⢣⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣷⢹⣿⣿⡜⣿⣿⡇⣿⣿⣿⢸⣿⣿⢇⣿⣿⡏⣾⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣷⢹⣿⣿⡼⣿⣿⢇⣿⣿⡟⣼⣿⣿⢱⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇
┃   │⡇⣿⣿⡇⣿⣿⣿⢸⣿⣿⡎⣿⣿⢣⢿⣿⡇⡿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⡟⡇⣿⣿⢻⢸⣿⡇⡏⣿⣿⢸⢹⣿⡇⡿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⢿⢸⣿⡟⡇⣿⣿⢹⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢹⣿⡇⡟⣿⣿⢸⢻⣿⡇⡿⣿⣿⢸⢿⣿⡇⣿⣿⢿⢸⣿⡟⡇⣿⣿⢻⢸⣿⡏⡇
┃   │⡇⣿⡟⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢹⣿⡇⡟⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⣿⢸⣿⣿⡇⣿⣿⢿⢸⣿⡟⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡏⣿⣿⢸⢻⣿⡇⡟⣿⣿⢸⢿⡟⡇⣿⣿⢹⢸⣿⡏⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⡿⡇⡇⣿⢻⢸⢸⡟⡇⡇⣿⢹⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⠹⡇⠇
┃   │⡇⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡏⣿⣿⢸⢹⡿⡇⡟⣿⢻⢸⢿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⡿⡇⡇⣿⢻⢸⢸⡏⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⡏⣿⢸⢸⢹⡇⡇⡏⢿⢸⢸⠻⡇⡇⡟⢻⢸⠸⠋⠇⠇⠟⠸⠸⠸⠃⠃⠃⠛⠘⠘⠘⠃⠃⠃⠉⠈⠈⠈⠁⠁⠁⠉⠈          ┃
┃   │⡇⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⣿⢸⢸⣿⡇⡇⣿⢿⢸⢸⡟⡇⡇⣿⢹⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⢹⡇⡇⡏⣿⢸⢸⢻⡇⡇⡿⣿⢸⢸⠿⡇⡇⡿⢻⢸⢸⠏⡇⡇⡿⢸⢸⢸⠇⡇⡇⡿⠸⠸⠸⠇⠇⠇⠿⠸⠘⠘⠃⠃⠃⠛⠘⠘⠈⠃⠁⠁⠉⠈⠈ ⠁⠁⠁                                              ┃
┃   │⡇⢻⡇⡇⡿⣿⢸⢸⢿⡇⡇⣿⣿⢸⢸⡿⡇⡇⣿⢻⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⢸⡇⡇⡇⣿⢸⢸⠸⡇⡇⠇⠿⠸⠸⠘⠇⠇⠇⠛⠘⠘⠈⠃⠃⠃⠘⠘⠈ ⠁⠁⠁⠈⠈⠈ ⠁                                                                                  ┃
┃   │⡇⠸⡇⡇⡇⢻⢸⢸⠈⠇⠇⠇⠸⠸⠸ ⠇⠃⠃⠘⠘⠘⠁⠃⠃⠋⠈⠈⠈⠁⠁⠁⠉⠈⠈                                                                                                                       ┃
┃   │⡇                                                                                                                                                         ┃
0.0 │⡇                                                                                                                                                         ┃
┃   └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┗━0.0━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Move <WASD> Rect <R> Quit <Q> ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━0.3
